tests/fixtures/syntax/valid/comment_after_expectation.repor
case "comment after expectation" {
  $ true
  assert {
    exit 0 # trailing comment on the expectation line
  }
}
