tests/fixtures/syntax/invalid/comment_only_assertion_block.repor
case "x" {
  $ true
  assert {
    # comment only, no real expectation
  }
}
